--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -22,9 +22,9 @@
                 Manage Recipe <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
-                <li><a href="#"> To Shopping List</a></li>
-                <li><a href="#"> Edit Recipe</a></li>
-                <li><a href="#"> Delete Recipe</a></li>
+                <li><a style="cursor: pointer;" (click)="addToShoppingList()"> To Shopping List</a></li>
+                <li><a style="cursor: pointer;" (click)="onEditRecipe()"> Edit Recipe</a></li>
+                <li><a style="cursor: pointer;"> Delete Recipe</a></li>
             </ul>
         </div>
     </div>
@@ -38,6 +38,12 @@
 
 <div class="row">
     <div class="col-xs-12">
-        Ingrediants
+        <ul class="list-group">
+            <li 
+            class="list-group-item"
+            *ngFor="let ingrediant of recipe.ingrediants">
+            {{ ingrediant.name }} - {{ ingrediant.amount }}
+        </li>
+        </ul>
     </div>
 </div>
