--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <form (ngSubmit)="onAdd(f)" #f="ngForm">
+        <form (ngSubmit)="onSubmit(f)" #f="ngForm">
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
@@ -27,9 +27,14 @@
             <div class="row">
                 <div class="col-xs-12">
                     <button type="submit"
-                            class="btn btn-success" [disabled]="!f.valid"> Add</button>
-                    <button type="button" class="btn btn-danger">Delete</button>
-                    <button type="button" class="btn btn-primary">Clear</button>
+                            class="btn btn-success" [disabled]="!f.valid"> {{ editMode ? 'update': 'Add' }}</button>
+                    <button type="button"
+                            class="btn btn-danger"
+                            *ngIf="editMode"
+                            (click)="onDelete()">Delete</button>
+                    <button type="button"
+                            class="btn btn-primary"
+                            (click)="onClear()">Clear</button>
                 </div>
             </div>
         </form>
