--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
             <button type="button" class="navbar-toggle" (click)="collapsed = !collapsed">
               <span class="icon-bar" *ngFor="let iconBar of [1, 2, 3]"></span>
             </button>
-            <a routerLink="/" class="navbar-brand">Recipe Book</a>
+            <a routerLink="/" class="navbar-brand">{{'Recipe Book' | shorten: 5}}</a>
           </div>
           
           <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
@@ -24,3 +24,11 @@
         </div>
     </div>
 </nav>
+
+<div class="container-fluid row my-3">
+    <div class="col">
+        App Status: {{ appStatus| async }}
+    </div>
+</div>
+
+<hr>
