--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -8,7 +8,7 @@
         <hr/>
         <ul class="list-group">
             <a 
-              *ngFor="let ingrediant of (ingrediants| filter:filteredvalue:'amount'); let i = index" 
+              *ngFor="let ingrediant of ((ingrediants | async)?.ingrediants | filter:filteredvalue:'amount'); let i = index" 
               class="list-group-item" 
               style="cursor: pointer;"
               (click)="onEditItem(i)">
