--- a/src/app/custom-form/custom-form.component.html
+++ b/src/app/custom-form/custom-form.component.html
@@ -1,6 +1,8 @@
 <form>
 
-    <lib-phone id="phone-id" name="phone-name" displayName="mobile." [appearAsterisk]="true" [(ngModel)]="phone">
+    <lib-phone id="phone_id" name="phone_name" displayName="mobile."
+               [appearAsterisk]="true" [readOnly]="false" maxLength="6"
+               pattern="^(\+\d{1,2}\s)?\(?\d{3}\)?[\s.-]\d{3}[\s.-]\d{4}$" [(ngModel)]="phone">
     </lib-phone>
     
     <div>
