edit maxlength value to be int

--- a/src/app/custom-form/custom-form.component.html
+++ b/src/app/custom-form/custom-form.component.html
@@ -1,7 +1,7 @@
 <form>
 
     <lib-phone id="phone_id" name="phone_name" displayName="mobile."
-               [appearAsterisk]="true" [readOnly]="false" maxLength="6"
+               [appearAsterisk]="true" [readOnly]="false" [maxLength]="6"
                pattern="^(\+\d{1,2}\s)?\(?\d{3}\)?[\s.-]\d{3}[\s.-]\d{4}$" [(ngModel)]="phone">
     </lib-phone>
     
