--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,6 +12,7 @@
                 <li routerLinkActive="active" *ngIf="isAuthenticated"><a routerLink="/recipes">Recipes</a></li>
                 <li routerLinkActive="active" *ngIf="!isAuthenticated"><a routerLink="/auth">Authentication</a></li>
                 <li routerLinkActive="active"><a routerLink="/shopping-list">ShoppingList</a></li>
+                <li routerLinkActive="active"><a routerLink="/form">Form Controls</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li style="cursor: pointer;" *ngIf="isAuthenticated">
