try address form nested control

--- a/src/app/custom-form/custom-form.component.html
+++ b/src/app/custom-form/custom-form.component.html
@@ -20,6 +20,10 @@
 
         </lib-lock-checker>
     </div>
+
+    <div class="">
+        <lib-address-form [legend]="'my Address form'"></lib-address-form>
+    </div>
    
 </form>
 
