--- a/src/app/custom-form/custom-form.component.html
+++ b/src/app/custom-form/custom-form.component.html
@@ -16,7 +16,7 @@
     </div>
     <hr>
     <div class="">
-        <lib-lock-checker [(ngModel)]="isChecked" name="checker" displayName="Checker" [checkType]="toggleCheckType">
+        <lib-lock-checker [(ngModel)]="isChecked" name="checker" displayName="Checker" [checkType]="toggleCheckType" (change)="getRandomValue()">
 
         </lib-lock-checker>
     </div>
